test/conformance/kuttl/validate/policy/standard/psa/test-exclusion-privileged-containers/02-resources.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
# - file: bad-pod.yaml
#   shouldFail: true
- file: excluded-pod.yaml
  shouldFail: false
- file: good-pod.yaml
  shouldFail: false
