test/conformance/kuttl/validate/policy/standard/psa/test-exclusion-privileged-containers/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: default
spec:
  containers:
  - name: nginx1
    image: nginx
    args:
    - sleep
    - 1d
    securityContext:
      privileged: false
  # initContainers:
  # - name: nginx2
  #   image: nginx
  #   args:
  #   - sleep
  #   - 1d
  #   securityContext:
  #     windowsOptions:
  #       hostProcess: false
  # ephemeralContainers:
  # - name: nginx3
  #   image: nginx
  #   args:
  #   - sleep
  #   - 1d
  #   securityContext:
  #     capabilities:
  #       add:
  #       - foo
  #       - baz
