test/conformance/kuttl/validate/policy/standard/psa/test-exclusion-privileged-containers/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-exclusion-privileged-containers
spec:
  background: true
  validationFailureAction: Enforce
  rules:
  - name: test-exclusion-privileged-containers
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      podSecurity:
        level: baseline
        version: latest
        exclude:
        - controlName: "Privileged Containers"
          images:
          - nginx
          restrictedField: "spec.containers[*].securityContext.privileged"
          values:
          - "true"
